[gd_scene load_steps=3 format=3 uid="uid://dr4udyvn8svgr"]

[ext_resource type="Script" uid="uid://bnnwhxmkvh4y6" path="res://Scripts/Battle/battle_target.gd" id="1_ppyn3"]
[ext_resource type="Script" uid="uid://xmu5unt2sp2g" path="res://Scripts/Battle/UI/battle_option.gd" id="2_2w1hl"]

[node name="BattleTarget" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -38.0
offset_top = -45.0
offset_right = 149.0
offset_bottom = 29.0
scale = Vector2(0.4, 0.4)
script = ExtResource("1_ppyn3")

[node name="HFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.5
offset_top = 7.5
offset_right = 15.5
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
last_wrap_alignment = 1
reverse_fill = true

[node name="Basic1" type="Button" parent="HFlowContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Basic1"
script = ExtResource("2_2w1hl")

[node name="Basic2" type="Button" parent="HFlowContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Basic2"
script = ExtResource("2_2w1hl")

[node name="Special1" type="Button" parent="HFlowContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Special1"
script = ExtResource("2_2w1hl")

[node name="Special2" type="Button" parent="HFlowContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Special2"
script = ExtResource("2_2w1hl")

[connection signal="pressed" from="HFlowContainer/Basic1" to="." method="_on_basic_1_pressed"]
[connection signal="pressed" from="HFlowContainer/Basic2" to="." method="_on_basic_2_pressed"]
[connection signal="pressed" from="HFlowContainer/Special1" to="." method="_on_special_1_pressed"]
[connection signal="pressed" from="HFlowContainer/Special2" to="." method="_on_special_2_pressed"]
